src/mxxParser.java
// Generated from mxx.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class mxxParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, Break=2, Char=3, Const=4, Continue=5, Class=6, Do=7, Else=8, For=9, 
		If=10, Int=11, New=12, Return=13, Static=14, String=15, Struct=16, Void=17, 
		While=18, Null=19, Bool=20, LeftParen=21, RightParen=22, LeftBracket=23, 
		RightBracket=24, LeftBrace=25, RightBrace=26, Less=27, LessEqual=28, Greater=29, 
		GreaterEqual=30, LeftShift=31, RightShift=32, Plus=33, PlusPlus=34, Minus=35, 
		MinusMinus=36, Star=37, Div=38, Mod=39, And=40, Or=41, AndAnd=42, OrOr=43, 
		Caret=44, Not=45, Tilde=46, Question=47, Colon=48, Semi=49, Comma=50, 
		Assign=51, Equal=52, NotEqual=53, Dot=54, BoolLiteral=55, Identifier=56, 
		IntegerLiteral=57, StringLiteral=58, Whitespace=59, Newline=60, BlockComment=61, 
		LineComment=62;
	public static final int
		RULE_compilationUnit = 0, RULE_indexExp = 1, RULE_arrSufSeq = 2, RULE_primaryExpression = 3, 
		RULE_postfixExpression2 = 4, RULE_postfixExpression = 5, RULE_argumentExpressionList = 6, 
		RULE_unaryExpression = 7, RULE_unaryOperator = 8, RULE_multiplicativeExpression = 9, 
		RULE_additiveExpression = 10, RULE_shiftExpression = 11, RULE_relationalExpression = 12, 
		RULE_equalityExpression = 13, RULE_andExpression = 14, RULE_exclusiveOrExpression = 15, 
		RULE_inclusiveOrExpression = 16, RULE_logicalAndExpression = 17, RULE_logicalOrExpression = 18, 
		RULE_assignmentExpression = 19, RULE_expressionseq = 20, RULE_typeSpecifier = 21, 
		RULE_statement = 22, RULE_compoundStatement = 23, RULE_blockItemList = 24, 
		RULE_blockItem = 25, RULE_expressionStatement = 26, RULE_selectionStatement = 27, 
		RULE_iterationStatement = 28, RULE_jumpStatement = 29, RULE_translationUnit = 30, 
		RULE_externalDeclaration = 31, RULE_declaration = 32, RULE_extraDeclaration = 33, 
		RULE_functionDefinition = 34, RULE_parameterList = 35, RULE_parameter = 36, 
		RULE_classDefinition = 37, RULE_classDeclarationList = 38, RULE_classdeclaration = 39, 
		RULE_identifier = 40;
	public static final String[] ruleNames = {
		"compilationUnit", "indexExp", "arrSufSeq", "primaryExpression", "postfixExpression2", 
		"postfixExpression", "argumentExpressionList", "unaryExpression", "unaryOperator", 
		"multiplicativeExpression", "additiveExpression", "shiftExpression", "relationalExpression", 
		"equalityExpression", "andExpression", "exclusiveOrExpression", "inclusiveOrExpression", 
		"logicalAndExpression", "logicalOrExpression", "assignmentExpression", 
		"expressionseq", "typeSpecifier", "statement", "compoundStatement", "blockItemList", 
		"blockItem", "expressionStatement", "selectionStatement", "iterationStatement", 
		"jumpStatement", "translationUnit", "externalDeclaration", "declaration", 
		"extraDeclaration", "functionDefinition", "parameterList", "parameter", 
		"classDefinition", "classDeclarationList", "classdeclaration", "identifier"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'[]'", "'break'", "'char'", "'const'", "'continue'", "'class'", 
		"'do'", "'else'", "'for'", "'if'", "'int'", "'new'", "'return'", "'static'", 
		"'string'", "'struct'", "'void'", "'while'", "'null'", "'bool'", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'<<'", 
		"'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'&'", "'|'", 
		"'&&'", "'||'", "'^'", "'!'", "'~'", "'?'", "':'", "';'", "','", "'='", 
		"'=='", "'!='", "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "Break", "Char", "Const", "Continue", "Class", "Do", "Else", 
		"For", "If", "Int", "New", "Return", "Static", "String", "Struct", "Void", 
		"While", "Null", "Bool", "LeftParen", "RightParen", "LeftBracket", "RightBracket", 
		"LeftBrace", "RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", 
		"LeftShift", "RightShift", "Plus", "PlusPlus", "Minus", "MinusMinus", 
		"Star", "Div", "Mod", "And", "Or", "AndAnd", "OrOr", "Caret", "Not", "Tilde", 
		"Question", "Colon", "Semi", "Comma", "Assign", "Equal", "NotEqual", "Dot", 
		"BoolLiteral", "Identifier", "IntegerLiteral", "StringLiteral", "Whitespace", 
		"Newline", "BlockComment", "LineComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "mxx.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public mxxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(mxxParser.EOF, 0); }
		public TranslationUnitContext translationUnit() {
			return getRuleContext(TranslationUnitContext.class,0);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitCompilationUnit(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Class) | (1L << Int) | (1L << String) | (1L << Void) | (1L << Bool) | (1L << Identifier))) != 0)) {
				{
				setState(82);
				translationUnit(0);
				}
			}

			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndexExpContext extends ParserRuleContext {
		public IndexExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_indexExp; }
	 
		public IndexExpContext() { }
		public void copyFrom(IndexExpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ContentindexContext extends IndexExpContext {
		public ExpressionseqContext expressionseq() {
			return getRuleContext(ExpressionseqContext.class,0);
		}
		public ContentindexContext(IndexExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterContentindex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitContentindex(this);
		}
	}
	public static class EmptyindexContext extends IndexExpContext {
		public EmptyindexContext(IndexExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterEmptyindex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitEmptyindex(this);
		}
	}

	public final IndexExpContext indexExp() throws RecognitionException {
		IndexExpContext _localctx = new IndexExpContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_indexExp);
		try {
			setState(92);
			switch (_input.LA(1)) {
			case T__0:
				_localctx = new EmptyindexContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(T__0);
				}
				break;
			case LeftBracket:
				_localctx = new ContentindexContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				match(LeftBracket);
				setState(89);
				expressionseq(0);
				setState(90);
				match(RightBracket);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrSufSeqContext extends ParserRuleContext {
		public ArrSufSeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrSufSeq; }
	 
		public ArrSufSeqContext() { }
		public void copyFrom(ArrSufSeqContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArrSufSeqsContext extends ArrSufSeqContext {
		public IndexExpContext indexExp() {
			return getRuleContext(IndexExpContext.class,0);
		}
		public ArrSufSeqContext arrSufSeq() {
			return getRuleContext(ArrSufSeqContext.class,0);
		}
		public ArrSufSeqsContext(ArrSufSeqContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterArrSufSeqs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitArrSufSeqs(this);
		}
	}
	public static class SingleArrSufContext extends ArrSufSeqContext {
		public IndexExpContext indexExp() {
			return getRuleContext(IndexExpContext.class,0);
		}
		public SingleArrSufContext(ArrSufSeqContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterSingleArrSuf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitSingleArrSuf(this);
		}
	}

	public final ArrSufSeqContext arrSufSeq() throws RecognitionException {
		ArrSufSeqContext _localctx = new ArrSufSeqContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_arrSufSeq);
		try {
			setState(98);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new SingleArrSufContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				indexExp();
				}
				break;
			case 2:
				_localctx = new ArrSufSeqsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				indexExp();
				setState(96);
				arrSufSeq();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryExpressionContext extends ParserRuleContext {
		public PrimaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpression; }
	 
		public PrimaryExpressionContext() { }
		public void copyFrom(PrimaryExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Pr_boolconstContext extends PrimaryExpressionContext {
		public TerminalNode BoolLiteral() { return getToken(mxxParser.BoolLiteral, 0); }
		public Pr_boolconstContext(PrimaryExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterPr_boolconst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitPr_boolconst(this);
		}
	}
	public static class Pr_expContext extends PrimaryExpressionContext {
		public ExpressionseqContext expressionseq() {
			return getRuleContext(ExpressionseqContext.class,0);
		}
		public Pr_expContext(PrimaryExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterPr_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitPr_exp(this);
		}
	}
	public static class Pr_nullContext extends PrimaryExpressionContext {
		public TerminalNode Null() { return getToken(mxxParser.Null, 0); }
		public Pr_nullContext(PrimaryExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterPr_null(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitPr_null(this);
		}
	}
	public static class Pr_idContext extends PrimaryExpressionContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Pr_idContext(PrimaryExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterPr_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitPr_id(this);
		}
	}
	public static class Pr_intconstContext extends PrimaryExpressionContext {
		public TerminalNode IntegerLiteral() { return getToken(mxxParser.IntegerLiteral, 0); }
		public Pr_intconstContext(PrimaryExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterPr_intconst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitPr_intconst(this);
		}
	}
	public static class Pr_strconstContext extends PrimaryExpressionContext {
		public TerminalNode StringLiteral() { return getToken(mxxParser.StringLiteral, 0); }
		public Pr_strconstContext(PrimaryExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterPr_strconst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitPr_strconst(this);
		}
	}

	public final PrimaryExpressionContext primaryExpression() throws RecognitionException {
		PrimaryExpressionContext _localctx = new PrimaryExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_primaryExpression);
		try {
			setState(109);
			switch (_input.LA(1)) {
			case Identifier:
				_localctx = new Pr_idContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				identifier();
				}
				break;
			case IntegerLiteral:
				_localctx = new Pr_intconstContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				match(IntegerLiteral);
				}
				break;
			case StringLiteral:
				_localctx = new Pr_strconstContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				match(StringLiteral);
				}
				break;
			case BoolLiteral:
				_localctx = new Pr_boolconstContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				match(BoolLiteral);
				}
				break;
			case LeftParen:
				_localctx = new Pr_expContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(104);
				match(LeftParen);
				setState(105);
				expressionseq(0);
				setState(106);
				match(RightParen);
				}
				break;
			case Null:
				_localctx = new Pr_nullContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(108);
				match(Null);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostfixExpression2Context extends ParserRuleContext {
		public PostfixExpression2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postfixExpression2; }
	 
		public PostfixExpression2Context() { }
		public void copyFrom(PostfixExpression2Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PostfixToPrimaryContext extends PostfixExpression2Context {
		public PrimaryExpressionContext primaryExpression() {
			return getRuleContext(PrimaryExpressionContext.class,0);
		}
		public PostfixToPrimaryContext(PostfixExpression2Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterPostfixToPrimary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitPostfixToPrimary(this);
		}
	}
	public static class Postfix_decContext extends PostfixExpression2Context {
		public PostfixExpression2Context postfixExpression2() {
			return getRuleContext(PostfixExpression2Context.class,0);
		}
		public Postfix_decContext(PostfixExpression2Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterPostfix_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitPostfix_dec(this);
		}
	}
	public static class Postfix_identiContext extends PostfixExpression2Context {
		public PostfixExpression2Context postfixExpression2() {
			return getRuleContext(PostfixExpression2Context.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LeftParen() { return getToken(mxxParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(mxxParser.RightParen, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public Postfix_identiContext(PostfixExpression2Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterPostfix_identi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitPostfix_identi(this);
		}
	}
	public static class Postfix_addContext extends PostfixExpression2Context {
		public PostfixExpression2Context postfixExpression2() {
			return getRuleContext(PostfixExpression2Context.class,0);
		}
		public Postfix_addContext(PostfixExpression2Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterPostfix_add(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitPostfix_add(this);
		}
	}
	public static class Postfix_expContext extends PostfixExpression2Context {
		public PostfixExpression2Context postfixExpression2() {
			return getRuleContext(PostfixExpression2Context.class,0);
		}
		public ArrSufSeqContext arrSufSeq() {
			return getRuleContext(ArrSufSeqContext.class,0);
		}
		public Postfix_expContext(PostfixExpression2Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterPostfix_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitPostfix_exp(this);
		}
	}
	public static class Postfix_arguContext extends PostfixExpression2Context {
		public PostfixExpression2Context postfixExpression2() {
			return getRuleContext(PostfixExpression2Context.class,0);
		}
		public ArgumentExpressionListContext argumentExpressionList() {
			return getRuleContext(ArgumentExpressionListContext.class,0);
		}
		public Postfix_arguContext(PostfixExpression2Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).enterPostfix_argu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mxxListener ) ((mxxListener)listener).exitPostfix_argu(this);
		}
	}

	public final PostfixExpression2Context postfixExpression2() throws RecognitionException {
		return postfixExpression2(0);
	}

	private PostfixExpression2Context postfixExpression2(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PostfixExpression2Context _localctx = new PostfixExpression2Context(_ctx, _parentState);
		PostfixExpression2Context _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_postfixExpression2, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new PostfixToPrimaryContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(112);
			primaryExpression();
			}
			_ctx.stop = _input.LT(-1);
			setState(138);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(136);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new Postfix_expContext(new PostfixExpression2Context(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpression2);
						setState(114);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(115);
						arrSufSeq();
						}
						break;
					case 2:
						{
						_localctx = new Postfix_identiContext(new PostfixExpression2Context(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpression2);
						setState(116);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(117);
						match(Dot);
						setState(118);
						identifier();
						setState(124);
						switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
						case 1:
							{
							setState(119);
							match(LeftParen);
							setState(121);
							_la = _input.LA(1);
							if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << String) | (1L << Void) | (1L << Bool) | (1L << Identifier))) != 0)) {
								{
								setState(120);
								parameterList();
								}
							}
